# Python_Exercises

Python_0_Starting/ex00/: Hello.py
Python_0_Starting/ex01/: format_ft_time.py
Python_0_Starting/ex03/: NULL_not_found.py
Python_0_Starting/ex04/: whatis.py
Python_0_Starting/ex05/: building.py
Python_0_Starting/ex06/: filterstring.py  ft_filter.py
Python_0_Starting/ex07/: sos.py
Python_0_Starting/ex08/: Loading.py  tester.py
Python_0_Starting/ex09/: Licence  pyproject.toml
Python_0_Starting/ex09/ft_package/: __init__.py
Python_0_Starting/ex09/ft_package/modules/: greetings.py
Python_1_Array/ex00/: give_bmi.py
Python_1_Array/ex01/: array2D.py
Python_1_Array/ex03/: main.py
Python_1_Array/ex04/: main.py  rotate.py  zoom.py
Python_1_Array/ex05/: load_image.py  pimp_image.py  tester.py
Python_2_Tables/ex00/: main.py
Python_2_Tables/ex01/: aff_life.py.py
Python_2_Tables/ex02/: aff_pop.py  load_csv.py
Python_2_Tables/ex03/: projection_life.py
Python_3_OPP/ex01/: S1E7.py  main.py
Python_3_OPP/ex02/: DiamondTrap.py  S1E9.py
Python_3_OPP/ex03/: ft_calculator.py
Python_3_OPP/ex04/: ft_calculator.py
Python_4_Dot/ex00/: statistics.py
Python_4_Dot/ex01/: in_out.py
Python_4_Dot/ex02/: callLimit.py
Python_4_Dot/ex03/: new_student.py
