[build-system]
requires = ["flit_core >= 3.12.0, <4"]
build-backend = "flit_core.buildapi"

[project]
version = "0.0.1"
name = "ft_package"
license = "MIT"
licenses-files = ["Licence"]
dependencies = []
requires-python = ">= 3.8"
authors = [
    {name = "Duarte", email = "test@42.fr"},
]
description = "First packages created"

[tool.flit.module]
name = "ft_package"
